// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-avatar-group #render should render component as expected (1) 1`] = `
<gux-avatar-group-beta avatar-limit="4">
  <template shadowrootmode="open">
    <div aria-label="avatar group containing 10 items. Use left and right arrows to navigate." class="gux-avatar-group">
      <slot></slot>
    </div>
  </template>
  <button>
    <gux-avatar-beta name="Conor Darcy"></gux-avatar-beta>
  </button>
  <button tabindex="-1">
    <gux-avatar-beta name="Daragh King"></gux-avatar-beta>
  </button>
  <button tabindex="-1">
    <gux-avatar-beta name="Gavin Everett"></gux-avatar-beta>
  </button>
  <button tabindex="-1">
    <gux-avatar-beta name="Jason Evans"></gux-avatar-beta>
  </button>
  <button tabindex="-1">
    <gux-avatar-beta name="JR Stith"></gux-avatar-beta>
  </button>
  <button tabindex="-1">
    <gux-avatar-beta name="Katie Bobbe"></gux-avatar-beta>
  </button>
  <button tabindex="-1">
    <gux-avatar-beta name="Thomas Dillon"></gux-avatar-beta>
  </button>
  <button tabindex="-1">
    <gux-avatar-beta name="Dorka Hajnal"></gux-avatar-beta>
  </button>
  <button tabindex="-1">
    <gux-avatar-beta name="Memo Lopez"></gux-avatar-beta>
  </button>
  <button tabindex="-1">
    <gux-avatar-beta name="Monse Garcia Limon"></gux-avatar-beta>
  </button>
</gux-avatar-group-beta>
`;

exports[`gux-avatar-group #render should render component as expected (2) 1`] = `
<gux-avatar-group-beta>
  <template shadowrootmode="open">
    <div aria-label="avatar group containing 10 items. Use left and right arrows to navigate." class="gux-avatar-group">
      <slot></slot>
    </div>
  </template>
  <gux-avatar-focusable-beta>
    <a href="www.google.com" target="_blank">
      <gux-avatar-beta name="Conor Darcy"></gux-avatar-beta>
    </a>
  </gux-avatar-focusable-beta>
  <gux-avatar-focusable-beta>
    <a href="www.google.com" tabindex="-1" target="_blank">
      <gux-avatar-beta name="Daragh King"></gux-avatar-beta>
    </a>
  </gux-avatar-focusable-beta>
  <gux-avatar-focusable-beta>
    <a href="www.google.com" tabindex="-1" target="_blank">
      <gux-avatar-beta name="Gavin Everett"></gux-avatar-beta>
    </a>
  </gux-avatar-focusable-beta>
  <gux-avatar-focusable-beta>
    <a href="www.google.com" tabindex="-1" target="_blank">
      <gux-avatar-beta name="Jason Evans"></gux-avatar-beta>
    </a>
  </gux-avatar-focusable-beta>
  <gux-avatar-focusable-beta>
    <a href="www.google.com" tabindex="-1" target="_blank">
      <gux-avatar-beta name="JR Stith"></gux-avatar-beta>
    </a>
  </gux-avatar-focusable-beta>
  <gux-avatar-focusable-beta>
    <a href="www.google.com" tabindex="-1" target="_blank">
      <gux-avatar-beta name="Katie Bobbe"></gux-avatar-beta>
    </a>
  </gux-avatar-focusable-beta>
  <gux-avatar-focusable-beta>
    <a href="www.google.com" tabindex="-1" target="_blank">
      <gux-avatar-beta name="Thomas Dillon"></gux-avatar-beta>
    </a>
  </gux-avatar-focusable-beta>
  <gux-avatar-focusable-beta>
    <a href="www.google.com" tabindex="-1" target="_blank">
      <gux-avatar-beta name="Dorka Hajnal"></gux-avatar-beta>
    </a>
  </gux-avatar-focusable-beta>
  <gux-avatar-focusable-beta>
    <a href="www.google.com" tabindex="-1" target="_blank">
      <gux-avatar-beta name="Memo Lopez"></gux-avatar-beta>
    </a>
  </gux-avatar-focusable-beta>
  <gux-avatar-focusable-beta>
    <a href="www.google.com" tabindex="-1" target="_blank">
      <gux-avatar-beta name="Monse Garcia Limon"></gux-avatar-beta>
    </a>
  </gux-avatar-focusable-beta>
</gux-avatar-group-beta>
`;

exports[`gux-avatar-group #render should render component as expected (3) 1`] = `
<gux-avatar-group-beta>
  <template shadowrootmode="open">
    <div aria-label="avatar group containing 6 items. Use left and right arrows to navigate." class="gux-avatar-group">
      <slot></slot>
    </div>
  </template>
  <gux-avatar-beta name="Alan Butler"></gux-avatar-beta>
  <gux-avatar-beta name="Conor Darcy"></gux-avatar-beta>
  <gux-avatar-beta name="Elliot Fitzgerald"></gux-avatar-beta>
  <gux-avatar-beta name="Greg Hayes"></gux-avatar-beta>
  <gux-avatar-beta name="Iseult Jones"></gux-avatar-beta>
  <gux-avatar-beta name="John King"></gux-avatar-beta>
</gux-avatar-group-beta>
`;
